[package]
name = "rtar"
version = "0.1.0"
edition = "2024"

[lib]
name = "rtar"
path = "src/lib.rs"

[[bin]]
name = "rtarbin"
path = "src/bin.rs"


[dependencies]
num-traits = "0.2"
itoa = "1"
dhfarm_engine = { git = "https://github.com/DataHenHQ/farm_engine.git", branch = "MSH-4" }
tokio = {version = "1.45.0", "features" = ["sync"]}
anyhow = "1"
tar = "0.4"
indexmap = "2.9"
thiserror = "2"
serde = "1.0.219"

[dev-dependencies]
rand = "0.9"
tempfile = "3"
